--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT = 3000
 MONGODB_URI = mongodb+srv://rachana_db_user:rDcrSZUBpcYBCjFw@symbiodb.dubxgmf.mongodb.net/symbio?retryWrites=true&w=majority&appName=SymbioDB
+
+GEMINI_API_KEY= AIzaSyBOS0Qm2zVdYwn5RffGh6uPGKDqIaL79pU
